--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.13",
+    "@mui/x-date-pickers": "^6.0.3",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "dayjs": "^1.11.7",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-daum-postcode": "^3.1.1",
